--- a/src/theme.less
+++ b/src/theme.less
@@ -6,4 +6,8 @@
 // Override less variables to here
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
-// @primary-color: #1890ff;
+@primary-color: #1F6084;
+@secondary-color: #264653;
+
+@layout-header-background: #1D3557;
+@menu-dark-inline-submenu-bg: #0F1927;
