--- a/src/app/pages/layout/base/base.component.css
+++ b/src/app/pages/layout/base/base.component.css
@@ -82,3 +82,10 @@ nz-content {
 .avatar-clickable {
   cursor: pointer;
 }
+
+.logout-button {
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+  right: 16px;
+}
