feat: add link to client addition in menu

--- a/src/app/pages/layout/base/base.component.html
+++ b/src/app/pages/layout/base/base.component.html
@@ -32,7 +32,7 @@
       <li nz-submenu nzOpen nzTitle="Cadastros" nzIcon="form">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Cliente \ Beneficiário</a>
+            <a href="/client/add">Cliente \ Beneficiário</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Opções do recibo</a>
