--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -3,7 +3,7 @@
   <nz-form-item>
     @if (i === 0) {
     <nz-form-label [nzXs]="24" [nzSm]="4" [nzFor]="`client${control.id}`">
-      Beneficitários:
+      Beneficitários
     </nz-form-label>
     }
     <nz-form-control
@@ -15,7 +15,7 @@
       <input
         class="passenger-input"
         nz-input
-        placeholder="placeholder"
+        placeholder="Nome"
         [attr.id]="control.id"
         [formControlName]="`client${control.id}`"
       />
@@ -41,7 +41,7 @@
         (click)="addField($event)"
       >
         <nz-icon nzType="plus" />
-        Add field
+        Adicionar campo
       </button>
     </nz-form-control>
   </nz-form-item>
@@ -50,7 +50,7 @@
       [nzXs]="{ span: 24, offset: 0 }"
       [nzSm]="{ span: 20, offset: 4 }"
     >
-      <button nz-button nzType="primary">Submit</button>
+      <button nz-button nzType="primary">Salvar</button>
     </nz-form-control>
   </nz-form-item>
 </form>
