--- a/src/app/pages/client/client.component.css
+++ b/src/app/pages/client/client.component.css
@@ -23,3 +23,37 @@
 .add-button {
   width: 60%;
 }
+
+h3 {
+  margin: 16px 0;
+}
+
+h3:first-child {
+  margin-top: 0;
+}
+
+h3:last-child {
+  margin-bottom: 0;
+}
+
+
+.custom-list {
+  width: 50%;
+  min-width: 250px;
+}
+
+.full-width {
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.full-width:hover {
+  background: #f0f0f0;
+}
