--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -1,4 +1,9 @@
-<form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+<form
+  nz-form
+  [formGroup]="validateForm"
+  (ngSubmit)="submitForm()"
+  class="add-form"
+>
   @for (control of listOfClients; track control; let i = $index) {
   <nz-form-item>
     @if (i === 0) {
@@ -56,12 +61,12 @@
 </form>
 <h3>Beneficitários \ Clientes cadastrados:</h3>
 <ul nz-list [nzDataSource]="data" nzBordered class="custom-list">
-  @for (item of data; track item) {
+  @for (item of data; track item; let idx = $index) {
   <li nz-list-item nzNoFlex>
     <button
       nz-button
       nzType="default"
-      (click)="startInfoMessage()"
+      (click)="showEditModal(idx)"
       class="full-width"
     >
       {{ item.name }}
@@ -69,4 +74,38 @@
   </li>
   }
 </ul>
+<nz-modal
+  [(nzVisible)]="isVisible"
+  [nzTitle]="modalTitle"
+  [nzContent]="modalContent"
+  [nzFooter]="modalFooter"
+  (nzOnCancel)="handleCancel()"
+  [nzWidth]="400"
+>
+  <ng-template #modalTitle>Editar Beneficitário / Cliente</ng-template>
+  <form nz-form>
+    <ng-template #modalContent>
+      <input
+        nz-input
+        [ngModel]="clientEditName"
+        name="clientEditName"
+        placeholder="Nome"
+      />
+    </ng-template>
 
+    <ng-template #modalFooter>
+      <button nz-button nzType="default" (click)="handleCancel()">
+        Voltar
+      </button>
+      <button
+        nz-button
+        nzType="primary"
+        (click)="handleOk()"
+        [nzLoading]="isConfirmLoading"
+        type="submit"
+      >
+        Salvar
+      </button>
+    </ng-template>
+  </form>
+</nz-modal>
